# mnist

./: .gitignore  Dockerfile  pyproject.toml  run_db.sh
note/: Untitled.ipynb  mnistp.ipynb
src/mnist/: Dockerfile  db.py  main.py  worker.b  worker.py
tests/: test_worker.py
